--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -436,7 +436,7 @@ bootstrap.min.css.navbar-toggle {
 
 #testimonial .testimonials-item p {
 	font-size: 16px;
-	color: #9a9a9a;
+	color: #570be1;
 	font-style: italic;
 	font-weight: 300;
 	background-color: #fff;
